Wokring on the random number generator
- wokring on the random number generator
- i can sucessfuly change the text in the textview to the generated number
- i am still working on creating a valid random color

--- a/AndroidStudioProject/app/src/main/res/values/colors.xml
+++ b/AndroidStudioProject/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
 
     <color name="pastel_blue">#80E2FF</color>
     <color name="pastel_purple">#E0BBE4</color>
+
+    <color  name="temp">#FFFFFF</color>
 </resources>
