--- a/AndroidStudioProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProject/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 
             <Spinner
                 android:id="@+id/spinner1"
-                android:layout_width="wrap_content"
+                android:layout_width="20dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
