--- a/AndroidStudioProject/app/src/main/res/values/colors.xml
+++ b/AndroidStudioProject/app/src/main/res/values/colors.xml
@@ -19,5 +19,6 @@
     <color name="pastel_blue">#80E2FF</color>
     <color name="pastel_purple">#E0BBE4</color>
 
-    <color  name="temp">#FFFFFF</color>
+<!--    <color name="testing_colors">#f2cf9415</color>-->
+
 </resources>
